--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body{
-        background-image: url(/images/image/ma.jpeg);
+        background-image: url(https://getwallpapers.com/wallpaper/full/7/a/e/192797.jpg);
         background-repeat: no-repeat;
         background-size: cover ;
         margin-top: 20px;
