--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
             <div class="card_content">
 
               <h1 class="card__header">Katakana</h1>
+              <button class="card__btn"><a href="https://www.youtube.com/watch?v=VlfhXyaGUvo">Learn more</a>
+              </button>
 
-
-              <button class="card__btn"><a herf="https://www.youtube.com/watch?v=s6DKRgtVLGA"> Learn more </a></button>
+             
             </div>
           </div>
         </div>
