--- a/footer.html
+++ b/footer.html
@@ -73,8 +73,7 @@ footer{
                 <span class="icon"><ion-icon name="call"></ion-icon></span>
                 <label>Phone: +959780992814</label><br>
                 <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                <label> Email: eiyoon61@gmail.com</label><br>
-                
+         <label>Email:</label> <a class="gmail"  href="mailto:eiyoon61@gmail.com">eiyoon61@gmail.com</a></p><br>                
             </div>
         </div>
     </div>
