--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,15 @@ footer{
         .icon :hover{
             text-decoration: dotted;
         }
-        
+     a .gmail {
+            color: #fff;
+            text-decoration: none;
+            font-size: small;
+        }
+        .gmail :hover{
+            text-decoration: underline;
+            color: #fff;
+        }        
 </style>
 
 
