--- a/footer.html
+++ b/footer.html
@@ -80,7 +80,7 @@ footer{
                 <h3>Contact</h3>
                 <span class="icon"><ion-icon name="call"></ion-icon></span>
                 <label>Phone: +959780992814</label><br>
-                <span class="icon"><ion-icon name="mail"></ion-icon></span>
+              <p>  <span class="icon"><ion-icon name="mail"></ion-icon></span>
          <label>Email:</label> <a class="gmail"  href="mailto:eiyoon61@gmail.com">eiyoon61@gmail.com</a></p><br>                
             </div>
         </div>
