--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@ input[type=submit]:hover {
        margin-left:24vw ;
       }
     }
-    
-    </style>
+    a :hover{
+         text-decoration: underline;}    </style>
 
 </head>
 <body>
