--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             </div>
             <button type="submit">Login</button>
             <div class="register-link">
-                <p>Don't have an account?<a href="#">Register here</a></p>
+                <p>Don't have an account?<a href="/sign up.html">Sign Up</a></p>
             </div>
         </div>
         </form>
