--- a/sign up.html
+++ b/sign up.html
@@ -17,7 +17,9 @@
  
  
   body{
-   background-color: #072740; 
+   background-image: url(/images/image/moon.jpeg); 
+   background-repeat: no-repeat;
+   background-size: cover;
   
   }
  
