--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
             font-size: larger;
             color: #fff;
         }
+        .phone label{
+            color:#fff;}
        
         @media (max-width: 60em) {
          .phone{ margin-top: 15%;}}
