--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,7 @@
             font-size: larger;
             color: #fff;
         }
-        .phone label{
-            color:#fff;}
+     
        
         @media (max-width: 60em) {
          .phone{ margin-top: 15%;}}
@@ -87,7 +86,9 @@ input[type=submit]:hover {
   font-size: larger;
   font-weight: 600;
 }
-
+         .phone a :hover{
+          text-decoration: underline;
+        }
 @media (max-width: 60em) {
       .container3 {
        width: 50%;
@@ -105,9 +106,9 @@ input[type=submit]:hover {
     <h1> Want to know more?</h1><br>
    
     <span class="icon"><ion-icon name="call"></ion-icon></span>
-    <label>Phone: +959780992814</label><br><br><br>
-    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-    <a href="mailto:eiyoon61@gmail.com" style="text-decoration: none; color: #fff;" > Email: eiyoon61@gmail.com</a><br><br>
+    <label style="color: #fff;"Phone: +959780992814</label><br><br><br>
+   <p> <span class="icon"><ion-icon name="mail"></ion-icon></span><label>Email:</label>
+    <a href="mailto:eiyoon61@gmail.com" style="text-decoration: none; color: #fff;" >  eiyoon61@gmail.com</a></p><br><br>
         <div class="ico">
       <span class="icon" > <ion-icon name="logo-facebook"></ion-icon></span>
       <span class="icon"><ion-icon name="logo-twitter"></ion-icon></span>
