--- a/About.html
+++ b/About.html
@@ -28,10 +28,11 @@
             background-image: url(https://img.freepik.com/free-vector/beautiful-landscape-scene-branch-cherry-blossoms-background-with-snowy-top-mountain-fuji-cloud-blue-sky-illustration-vector_1150-56592.jpg?size=626&ext=jpg&ga=GA1.1.1722672428.1703345905&semt=ais);
             background-repeat: no-repeat;
             background-size: cover;
-            min-width: 460px;
+           
         }
-
-
+        @media (max-width: 60em) {
+            header { 
+                height:40vh}
 
         .header-content {
             /* margin-top: 8.5vw; */
