--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@ input[type=submit]:hover {
         }
 @media (max-width: 60em) {
       .container3 {
-       width: 50%;
+       width: 70%;
        margin-left:24vw ;
       }
     }
@@ -106,7 +106,7 @@ input[type=submit]:hover {
     <h1> Want to know more?</h1><br>
    
     <span class="icon"><ion-icon name="call"></ion-icon></span>
-    <label style="color: #fff;"Phone: +959780992814</label><br><br><br>
+    <label style="color: #fff;">Phone: +959780992814</label><br><br><br>
    <p> <span class="icon"><ion-icon name="mail"></ion-icon></span><label>Email:</label>
     <a href="mailto:eiyoon61@gmail.com" style="text-decoration: none; color: #fff;" >  eiyoon61@gmail.com</a></p><br><br>
         <div class="ico">
