--- a/contact.html
+++ b/contact.html
@@ -107,9 +107,9 @@ input[type=submit]:hover {
 </head>
 <body>
     <div id="header"></div>
-    <header>
+    <header >
     <div class="phone">
-    <h1> Want to know more?</h1><br>
+    <h1 style="font-weight:900"> Want to know more?</h1><br>
    
   <p> <span class="icon"><ion-icon name="call"></ion-icon></span>
     <label >Phone:+959780992814</label></p><br>
